[build-system]
depemdencies = [
    "hatchling",
    "setuptools",
    "mongoengine",
    "rich",
    "click",
    "pytest",
]
build-backend = "hatchling.build"

[project]
name = "dexter"
dynamic = ["version"]
description = "Double-entry expense tracker for personal finances"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "John Conery", email = "jconery@icloud.com" },
]

[project.scripts]
dex = "dexter.main:main"

[tool.pytest.ini_options]

[tool.hatch.version]
path = "src/dexter/__about__.py"