[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"

[project]
name = "dexter"
dynamic = ["version"]
description = "Double-entry expense tracker for personal finances"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools",
    "mongoengine",
    "rich",
    "click",
    "pytest",
]
authors = [
  { name = "John Conery", email = "jconery@icloud.com" },
]

[project.scripts]
dex = "dexter.main:main"

[tool.pytest.ini_options]

[tool.hatch.version]
path = "src/dexter/__about__.py"